Tweak 88x31 styling, fix footer spacing

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -84,7 +84,7 @@ body {
 				0 0 0 0.0625rem var(--primary-color-alpha),
 				0 0.125rem 0.375rem 0.125rem var(--primary-color-alpha),
 				0 0.25rem 1.5rem 0.25rem var(--primary-color-alpha);
-			border-radius: var(--rounded-corner-small);
+			// border-radius: var(--rounded-corner-small);
 			width: min(calc(45.5rem - 0.375rem), 100vw);
 			height: min(calc(5.625rem - 0.375rem), 12.367vw);
 			overflow: hidden;
@@ -103,7 +103,8 @@ body {
 	}
 
 	#increment {
-		margin-block-start: 1.25rem;
+		margin-block-start: 1rem;
+		box-shadow: var(--shadow);
 		border: none;
 		background: url("https://incr.easrng.net/bg.gif");
 		width: 88px;
