--- a/sass/index.scss
+++ b/sass/index.scss
@@ -721,11 +721,11 @@
 	text-align: center;
 
 	img {
-		all: unset;
 		display: inline-block;
 		position: relative;
 		transition: var(--transition-bezier);
-		cursor: zoom-in;
+		margin: 0;
+		border-radius: 0;
 		image-rendering: pixelated;
 
 		&:hover {
